Bug 616452 - Dynamically inserted select options aren't reflected in accessible tree, r=fer, a=blocking2.0Final+