accessible/src/html/nsHTMLSelectAccessible.cpp
@@ -675,6 +675,15 @@ nsHTMLComboboxAccessible::NativeRole()
 }
 
 void
+nsHTMLComboboxAccessible::InvalidateChildren()
+{
+  nsAccessibleWrap::InvalidateChildren();
+
+  if (mListAccessible)
+    mListAccessible->InvalidateChildren();
+}
+
+void
 nsHTMLComboboxAccessible::CacheChildren()
 {
   nsIFrame* frame = GetFrame();
